Changelog
=========

0.4 - Unreleased
----------------

* Skip checkout of existing packages.
  [fschulze]

0.3 - 2009-03-22
----------------

* Fixed source distribution by adding a MANIFEST.in.
  [fschulze]

* Added -e and -l options to checkout script.
  [fschulze]

0.2 - 2009-03-22
----------------

* Added ``auto-checkout`` option (only works with subversion at the moment).
  [fschulze]

* Added support for git.
  [fschulze]

* Throw error when trying to checkout unknown package.
  [fschulze]

* Fixed target directory for checkouts.
  [fschulze]

0.1 - 2009-03-19
----------------

* Initial release
